# ur5_codes

./: README.md
ur5_preprogram/: CMakeLists.txt~  package.xml  package.xml~
ur5_preprogram/scripts/: joint_waypoints_store_test.py~
ur5_preprogram/src/: joint_waypoints.cpp  joint_waypoints_alternative.cpp  joint_waypoints_alternative.cpp~
ur_manual_drive/: CMakeLists.txt  CMakeLists.txt~  package.xml
ur_manual_drive/config/: teleop.yaml
ur_manual_drive/launch/: joy_teleop.launch
ur_manual_drive/script/: gripper_client.py  gripper_client.py~  gripper_joystick_client.py  gripper_joystick_client.py~  gripper_server.py  gripper_server.py~  gripper_server_test.py  gripper_server_test.py~
ur_manual_drive/src/: teleop_ur.cpp  teleop_ur.cpp~
