<?xml version="1.0"?>
<package>
  <name>ur5_preprogram</name>
  <version>1.0.0</version>
  <description>Pre-programmed trajectories of UR5</description>

  <author email="abdoorasheed@gmail.com">Abdur Rosyid</author>

  <maintainer email="abdoorasheed@gmail.com">Abdur Rosyid</maintainer>

  <license>BSD</license>

  <url type="website">http://abdurrosyid.com</url>
  <url type="bugtracker">https://github.com/abdur-rosyid/ur5_preprogram/issues</url>
  <url type="repository">https://github.com/abdur-rosyid/ur5_preprogram</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
